# madeinabyss-memvid-search

./: README.md  pyproject.toml
assets/: madeinabyss-index.faiss  madeinabyss-index.json
src/: create_video.py  load_document.py
